# anyxx

./: .clang-tidy  .gitignore  21_Tree_any_8cpp-example.html  21_Tree_any_borrow_as_8cpp-example.html  21_Tree_any_dispatch_8cpp-example.html  31_Animals_any_dispatch_8cpp-example.html  CMakeLists.txt  CMakePresets.json  CMakeUserPresetsTemplate.json  Dependencies.cmake  Doxyfile.in  Index.md  ProjectOptions.cmake  README.md  README_8cpp-example.html  README_docker.md  X1_any_weak_const_8cpp-example.html  Xvcpkg.json  _1_any_shape_8cpp-example.html  _2b_trait_monoid_8cpp-example.html  _2c_trait_any_variant_8cpp-example.html  _2d_trait_self_8cpp-example.html  _2f_trait_partial_equality_8cpp-example.html  _2o_trait_simple_8cpp-example.html  _3_any_range_8cpp-example.html  _5_any_template_8cpp-example.html  _config.yml  annotated.html  annotated_dup.js  anyxx_8hpp.html  anyxx_8hpp.js  anyxx_8hpp_source.html  anyxx__function_8hpp_source.html  anyxx__range_8hpp_source.html  classanyxx_1_1any-members.html  classanyxx_1_1any.html  classanyxx_1_1any.js  classanyxx_1_1dispatch.html  classanyxx_1_1dispatch_3_01R_07Args_8_8_8_08_4-members.html  classanyxx_1_1dispatch_3_01R_07Args_8_8_8_08_4.html  (+109 more)
InherritanceVsTypeErasure/: CMakeLists.txt
InherritanceVsTypeErasure/01_Callback_Inheritance/: CMakeLists.txt
InherritanceVsTypeErasure/02_Callback_TypeErased/: CMakeLists.txt
InherritanceVsTypeErasure/03_Sink_Inheritance/: 03_Sink_Inheritance.cpp  CMakeLists.txt
InherritanceVsTypeErasure/03_Sink_Inheritance_modern/: 03_Sink_Inheritance_modern.cpp  CMakeLists.txt
InherritanceVsTypeErasure/04_Sink_TypeErased/: 04_Sink_TypeErased.cpp  CMakeLists.txt
InherritanceVsTypeErasure/05_Sink_TypeErased_w_Type_info_dispatch/: CMakeLists.txt
InherritanceVsTypeErasure/05_Sink_TypeErased_w_any_dispatch/: 05_Sink_TypeErased_w_any_dispatch.cpp  CMakeLists.txt
InherritanceVsTypeErasure/06_Sink_TypeErased_w_proxy/: CMakeLists.txt  main.cpp
InherritanceVsTypeErasure/07_Sink_TypeErased_w_lifetime/: CMakeLists.txt  main.cpp
InherritanceVsTypeErasure/1_Callback_Inheritance/: CMakeLists.txt
InherritanceVsTypeErasure/20_Tree_OO/: 20_Tree_OO.cpp  CMakeLists.txt
InherritanceVsTypeErasure/20_Tree_YOMM2/: 20_Tree_YOMM2.cpp  CMakeLists.txt
InherritanceVsTypeErasure/21_Tree_TE/: CMakeLists.txt  Tree_TE.cpp
InherritanceVsTypeErasure/21_Tree_TE_any/: 21_Tree_TE_any.cpp  CMakeLists.txt
InherritanceVsTypeErasure/21_Tree_TE_dispach_via_m_table/: 21_Tree_TE_dispach_via_m_table.cpp  CMakeLists.txt
InherritanceVsTypeErasure/21_Tree_TE_dispach_via_v_table/: 21_Tree_TE_dispach_via_v_table.cpp  CMakeLists.txt
InherritanceVsTypeErasure/21_Tree_TE_dispatch_via_type_info/: 21_Tree_TE_dispatch_via_type_info.cpp  CMakeLists.txt
InherritanceVsTypeErasure/2_Callback_TypeErased/: CMakeLists.txt  main.cpp
InherritanceVsTypeErasure/3_Sink_Inheritance/: CMakeLists.txt  main.cpp
InherritanceVsTypeErasure/4_Sink_TypeErased/: CMakeLists.txt  main.cpp
InherritanceVsTypeErasure/5_Sink_TypeErased_w_Type_info_dispatch/: CMakeLists.txt  main.cpp
InherritanceVsTypeErasure/6_Sink_TypeErased_w_proxy/: CMakeLists.txt  main.cpp
InherritanceVsTypeErasure/7_Sink_TypeErased_w_lifetime/: CMakeLists.txt  main.cpp
anyxx/: CMakeLists.txt  anyxx.hpp
example_whole_picture/: CMakeLists.txt  example_1_core.cpp
example_whole_picture/layer_0_architecture/: architecture.cpp  architecture.hpp  picture.cpp  picture.hpp
example_whole_picture/layer_1_core/: CMakeLists.txt  circle.cpp  circle.hpp  circle_factory.cpp  circle_factory.hpp  core.cpp  core.hpp  line.cpp  line.hpp
examples/: CMakeLists.txt
examples/inline_mode/: 20_Tree_virtual_function.cpp  21_Tree_any.cpp  21_Tree_any_dispatch.cpp  21_Tree_any_dynm.cpp  21_Tree_any_dyns.cpp  21_Tree_any_inline.cpp  21_Tree_any_rtti.cpp  30a_Anmials_varaiant_visit.cpp  30b_Animals_virtual_functions.cpp  30b_Anmials_virtual_functions.cpp  31_Animals_any_dispatch.cpp  31_Anmials_any_dispatch.cpp  README.cpp  README.cpp1  X1_any_weak_const.cpp  X1_weak_const.cpp  X2_any_value.cpp  XX_arena_copy_on_write.cpp  XX_callback.cpp  XX_running_object_table.cpp  _1_any_shape.cpp  _1_shapes.cpp  _2_stringable_trait.cpp  _2a_trait_stringable.cpp  _2b_trait_monoid.cpp  _2b_trait_monoid_new.cpp  _2c_trait_any_variant.cpp  _2d_trait_self.cpp  _2e_trait_algebra.cpp  _2f_trait_equal_compareable.cpp  _2f_trait_partial_equality.cpp  _2g_trait_equal_compareable_to.cpp  _2h_strong_typedef.cpp  (+4 more)
lib/: CMakeLists.txt  virtual_void.cppm
src/: CMakeLists.txt  virtual_void.cpp  virtual_void.cppm
test/: 01_Callback_Inheritance.cpp  02_Callback_TypeErased.cpp  03_Sink_Inheritance.cpp  03_Sink_Inheritance_modern.cpp  04_Sink_TypeErased.cpp  05_Sink_TypeErased_w_any_cast.cpp  05_Sink_TypeErased_w_any_dispach_simple.cpp  05_Sink_TypeErased_w_any_dispatch.cpp  06_Sink_TypeErased_w_proxy.cpp  07_Sink_TypeErased_w_lifetime.cpp  20_Tree_OO.cpp  20_Tree_YOMM2.cpp  21_Tree_TE_dispach_via_m_table.cpp  21_Tree_TE_dispatch_via_any.cpp  21_Tree_TE_dispatch_via_any_and_type_index.cpp  21_Tree_TE_dispatch_via_m_table.cpp  21_Tree_TE_dispatch_via_type_info.cpp  21_Tree_TE_dynamic_interface.cpp  21_Tree_TE_erased_interface.cpp  21_Tree_TE_erased_interface_w_cast.cpp  21_Tree_TE_interface_extension_method.cpp  21_Tree_TE_open_concept.cpp  CMakeLists.txt  _call_operator.cpp  _class_hierarchy_test.cpp  _data_conversion.cpp  _data_erase_unerase.cpp  _dynamic_interface_test.cpp  _erased_cast_test.cpp  _erased_interface_lifetime_convert.cpp  _erased_interface_template_test.cpp  _erased_interface_test.cpp  _erased_lifetime.cpp  _erased_lifetime_data_test.cpp  _erased_std_emulated.cpp  _extension_method.cpp  _hook_test.cpp  _interface_call_operator.cpp  _interface_cast.cpp  _interface_cast_enable.cpp  (+37 more)
tutorials/: CMakeLists.txt  tutorial__30.cpp  tutorial__30.md  tutorial__31.cpp  tutorial__31.md  tutorial__32.cpp  tutorial__33.cpp  tutorial__33.md  tutorial___1.cpp  tutorial___1.md  tutorial___2.cpp  tutorial___2.md  tutorial___3.cpp  tutorial___3.md  tutorial_lifetime___1.cpp  tutorial_lifetime___1.md  tutorials_toc.md
(+787 files in other folders)
